* App.xaml.cs: Styled
* MasterDetail.cs:
* Database.cs:
* Master.xaml:
* LovoForms.projitems:
* Master.xaml.cs:
* MasterPageItem.cs: Master overview list populated with dummy data.

--- a/LovoForms/Master/Master.xaml
+++ b/LovoForms/Master/Master.xaml
@@ -8,6 +8,23 @@
 	<ContentPage.Content>
         <StackLayout VerticalOptions="FillAndExpand">
             <ListView x:Name="listView">
+				<ListView.Footer>
+				    <StackLayout Padding="10,5,0,5">
+					    <Button Text="new" x:Name="newButton"
+        					HorizontalOptions="Center"
+				            VerticalOptions="CenterAndExpand"
+				            Clicked="OnNewClicked" />
+				    </StackLayout>
+				</ListView.Footer>
+                <ListView.ItemTemplate>
+                    <DataTemplate>
+                        <TextCell Text="{Binding Label}">
+                        	<TextCell.ContextActions>
+            					<MenuItem Clicked="OnDelete" CommandParameter="{Binding .}" Text="Delete" IsDestructive="True" />
+         					</TextCell.ContextActions>
+						</TextCell>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
             </ListView>
         </StackLayout>
 	</ContentPage.Content>
